finaly commit, production build

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://webboca.com/assets/static/favicon.ce0531f.cebf8d3a6f9275f5ec9375149c0bc763.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Apps - Web Boca</title>
   </head>
   <body>
     <div id="root"></div>
